# MPC-WBC

./: .gitignore  CMakeLists.txt  README.md  main.cc
Controller/: Controller.cc  Controller.hpp  MPC.cc  MPC.hpp  MPC_util.cc  MPC_util.hpp  QP.cc  QP.hpp
GUI/: simulate.cpp  simulate.h
Kinematics/: B_Kinematics.cc  B_Kinematics.hpp  F_Kinematics.cc  F_Kinematics.hpp
LegTrajectory/: BezierCurve.cc  BezierCurve.hpp  Trajectory.cc  Trajectory.hpp
Quadxml/: 3D_Quad.xml  3D_Quad22.xml  mjmodel.xml
State_Estimation/: FSM.cc  FSM.hpp
robot/: Actuator.cc  Actuator.hpp  Body.cc  Body.hpp  Integrate.cc  Integrate.hpp  robot_parameter.cc  robot_parameter.hpp
urdf/: 3D_Quad.urdf
util/: Sub_func.hpp  control_ui.hpp  dataLogging.cc  dataLogging.hpp  filter.cc  filter.hpp  globals.cc  globals.hpp
